--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="création site web, refonte site web, devenir attractive sur internet, devenir visible sur internet, seo, site web, site internet, agence design lyon, agence design, agence web desing, la panthère web desing, comment créer un site web, pourquoi créer un site web, combien de temps pour créer un site web, aide création site web, aide web desing">
+    <meta name="keywords" content="création site web, refonte site web, devenir attractive sur internet, devenir visible sur internet, seo, site web, site internet, agence design lyon, agence design, agence web design, la panthère web design, comment créer un site web, pourquoi créer un site web, combien de temps pour créer un site web, aide création site web, aide web design">
     <meta name="description" content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet grâce à des bonnes stratégies et illustrations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -37,7 +37,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Agence de web desing La Panthère logo" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Agence de web design La Panthère logo" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -61,7 +61,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence de web desing La Panthère logo" />
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence de web design La Panthère logo" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
