--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="navbar-collapse navbar-1 special-dropdown-nav collapse" aria-expanded="false" style="height: 1px;" role="button">
+			<div class="navbar-collapse navbar-1 special-dropdown-nav collapse" aria-expanded="false" style="height: 1px;" role="">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
