--- a/index.html
+++ b/index.html
@@ -246,38 +246,38 @@
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								<li class="li_footer"><a href="voiture.com" class="space-li">voiture.com</a></li>
+								<li class="li_footer"><a href="pizza.com" class="space-li">pizza.com</a></li>
+								<li class="li_footer"><a href="matoiture.com" class="space-li">matoiture.com</a></li>
+								<li class="li_footer"><a href="immobilierseo.com" class="space-li">immobilierseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 1
 						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
+							<li class="li_footer"><a href="annuaireagence.com" class="space-li">annuaireagence.com</a></li>
+							<li class="li_footer"><a href="annuaireseo.com" class="space-li">annuaireseo.com</a></li>
+							<li class="li_footer"><a href="annuairemarketing.com" class="space-li">annuairemarketing.com</a></li>
+							<li class="li_footer"><a href="123seoture.com" class="space-li">123seo.com</a></li>
+							<li class="li_footer"><a href="123site.com" class="space-li">123site.com</a></li>
+							<li class="li_footer"><a href="annuairewordpress.com" class="space-li">annuairewordpress.com</a></li>
+							<li class="li_footer"><a href="listeagence.com" class="space-li">listeagence.com</a></li>
+							<li class="li_footer"><a href="meilleuresagencesparis.com" class="space-li">meilleuresagencesparis.com</a></li>
+							<li class="li_footer"><a href="listeseo.com" class="space-li">listeseo.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 2
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+							<li class="li_footer"><a href="betterseo.com" class="space-li">betterseo.com</a></li>
+							<li class="li_footer"><a href="ameliorerseo.com" class="space-li">ameliorerseo.com</a></li>
+							<li class="li_footer"><a href="seojuicelien.com" class="space-li">seojuicelien.com</a></li>
+							<li class="li_footer"><a href="meilleursliens.com" class="space-li">meilleursliens.com</a></li>
+							<li class="li_footer"><a href="liensagogo.com" class="space-li">liensagogo.com</a></li>
+							<li class="li_footer"><a href="backlink.com" class="space-li">backlink.com</a></li>
+							<li class="li_footer"><a href="linkjuiceannuaire.com" class="space-li">linkjuiceannuaire.com</a></li>
+							<li class="li_footer"><a href="remontersurgoogle.com" class="space-li">remontersurgoogle.com</a></li>
+							<li class="li_footer"><a href="vraiseofiable.com" class="space-li">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
